# maiba

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Makefile  README.md  STATE.md  pyproject.toml
.claude/: CLAUDE.md  settings.json
.claude/rules/: tickets.md
.claude/skills/ticket-claim/: SKILL.md
.claude/skills/ticket-close/: SKILL.md
.claude/skills/ticket-new/: SKILL.md
.claude/skills/ticket-ready/: SKILL.md
.claude/skills/ticket-release/: SKILL.md
config/: maiba.yaml
hooks/: pre-commit
src/maiba/: __init__.py  _logging.py  cli.py  config.py  detect.py  model.py  pdf.py  pipeline.py  ris.py
src/maiba/resolvers/: __init__.py  _scoring.py  crossref.py  openalex.py
tests/: conftest.py  test_auth_observability.py  test_cache.py  test_cli_interrupt.py  test_cli_streams.py  test_config.py  test_detect.py  test_dotenv.py  test_hygiene.py  test_hygiene_stubs.py  test_logging.py  test_pdf_doi.py  test_pdf_extract.py  test_pdf_metadata.py  test_pipeline_integration.py  test_pipeline_merge.py  test_progress.py  test_resolve_crossref.py  test_resolve_openalex.py  test_ris_roundtrip.py  test_scoring.py  test_top_candidates_log.py
tests/fixtures/: ArchiveCCS.ris  README.md  bad-binaryfile.ris  bad-malformed-tag.ris  bad-no-er.ris  bad-no-ty.ris  bad-notaris.ris  bad-truncated-mid-record.ris  et-al-with-doi.ris  good-loose-whitespace.ris  good.ris
tests/fixtures/ArchiveCCS-cleaned/: ArchiveCCS-cleaned.ris
tests/fixtures/responses/crossref/: ademe-2002-search.json  adler-2005-search.json  akimoto-2004-search.json  ashworth-2009-doi.json  lemonde-sleipner-2008-search.json  stone-2008-doi.json
tests/fixtures/responses/openalex/: ademe-2002-search.json  adler-2005-search.json  akimoto-2004-search.json  ashworth-2009-doi.json  lemonde-sleipner-2008-search.json  stone-2008-doi.json
tickets/: 0001-ris-roundtrip-and-config.erg  0002-detect-gaps.erg  0003-resolve-openalex.erg  0004-resolve-crossref.erg  0005-cli-pipeline.erg  0006-capture-real-api-responses.erg  0007-hygiene-tests.erg  0008-progress-and-cache.erg  0008-progress-glyphs.erg  0009-http-cache.erg  0010-cli-streams-and-discoverability.erg  0011-logging-and-verbose.erg  0012-openalex-authentication.erg  0013-scorer-handles-missing-input-fields.erg  0014-extract-pdf-first-page.erg  0015-llm-resolver.erg  0016-review-queue.erg  0017-load-dotenv.erg  0018-skip-rate-limited-resolver.erg  0019-clean-keyboard-interrupt.erg  0020-llm-call-audit-log.erg  0020-verbose-after-verb.erg  0021-llm-preflight-confirm.erg  0023-env-loading-observability.erg  0024-crossref-query-expansion.erg  0025-top-candidates-debug.erg  0026-relaxed-matcher-and-simpler-log.erg  0027-winner-marker-clean-log.erg  0028-extract-pdf-metadata.erg  0029-keep-all-derived-fields.erg  0030-doi-from-pdf-firstpage.erg  0031-capture-openalex-id.erg  0032-fix-metadata-test-corpus-dep.erg  0033-decide-pdf-metadata-in-pipeline.erg  0034-uv-env-file-leak-fix.erg
tickets/tools/go/: go.mod  main.go
