[project]
name = "maiba"
version = "0.0.0"
description = "MAIBA — My AI Bibliography Assistant. Detect and fix incomplete reference-manager records."
authors = [{ name = "Minh Ha-Duong", email = "minh.ha-duong@cnrs.fr" }]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "CECILL-B" }
keywords = ["bibliography", "zotero", "reference-manager", "metadata", "ris", "bibtex"]

# Runtime deps are intentionally empty until ARCHITECTURE.md §2 is decided.
# Add only what the agreed v0 actually imports.
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy",
]

# Placeholder script registration. The implementation does not exist yet —
# uncomment and wire when the CLI shape is decided in ARCHITECTURE.md §2.1.
# [project.scripts]
# maiba = "maiba.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/maiba"]

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
# E/F/I/N/W/UP — pyflakes, pep8, isort, naming, warnings, pyupgrade
# B          — bugbear (common bug patterns)
# RET        — return statement clarity
# C901       — McCabe cyclomatic complexity (default threshold 10)
# PLR0912    — too many branches per function (default 12)
# PLR0915    — too many statements per function (default 50)
select = ["E", "F", "I", "N", "W", "UP", "B", "RET", "C901", "PLR0912", "PLR0915"]

[tool.pytest.ini_options]
testpaths = ["tests"]
