[project]
name = "maiba"
version = "0.0.0"
description = "MAIBA — My AI Bibliography Assistant. Detect and fix incomplete reference-manager records."
authors = [{ name = "Minh Ha-Duong", email = "minh.ha-duong@cnrs.fr" }]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "CECILL-B" }
keywords = ["bibliography", "zotero", "reference-manager", "metadata", "ris", "bibtex"]

dependencies = [
    "pydantic>=2",
    "pyyaml>=6",
    "rispy>=0.10",
    "httpx>=0.27",
    "rapidfuzz>=3",
    "hishel>=1.2",
    "python-dotenv>=1.0",
    "pypdf>=5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy",
    "respx>=0.21",
]

[project.scripts]
maiba = "maiba.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/maiba"]

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
# E/F/I/N/W/UP — pyflakes, pep8, isort, naming, warnings, pyupgrade
# B          — bugbear (common bug patterns)
# RET        — return statement clarity
# C901       — McCabe cyclomatic complexity (default threshold 10)
# PLR0912    — too many branches per function (default 12)
# PLR0915    — too many statements per function (default 50)
select = ["E", "F", "I", "N", "W", "UP", "B", "RET", "C901", "PLR0912", "PLR0915"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "adherence: project rule enforcement (hygiene/discipline/contracts)",
]
